# recon

./: Cargo.toml  README.md
demo/: demo.sh  record.sh
demo/tapes/: full-tour.tape  readme.tape  table-view.tape  tmux-demo.tape  zoom-room.tape
docs/: plan.md  requirements.md
src/: app.rs  cli.rs  history.rs  io_util.rs  main.rs  model.rs  new_session.rs  park.rs  process.rs  session.rs  tmux.rs  ui.rs  view_ui.rs  warp.rs
tests/: e2e.sh
tests/fixtures/: database_internals.txt  distributed_systems.txt  operating_systems.txt
